// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchAllModuleArchive should return multiple request actions 1`] = `
[
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2016/2017",
        "academicYear": "2016/2017",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2016/2017",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2017/2018",
        "academicYear": "2017/2018",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2017/2018",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2018/2019",
        "academicYear": "2018/2019",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2018/2019",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2019/2020",
        "academicYear": "2019/2020",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2019/2020",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2020/2021",
        "academicYear": "2020/2021",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2020/2021",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2021/2022",
        "academicYear": "2021/2022",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2021/2022",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2022/2023",
        "academicYear": "2022/2023",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2022/2023",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2023/2024",
        "academicYear": "2023/2024",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2023/2024",
      },
      "type": "FETCH_ARCHIVE_MODULE",
    },
  ],
]
`;

exports[`fetchModule should remove LRU modules above limit 1`] = `
[
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_MODULE/CS1010S",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S",
      },
      "type": "FETCH_MODULE",
    },
  ],
  [
    {
      "payload": [
        "CS0",
        "CS1",
        "CS2",
        "CS3",
        "CS4",
      ],
      "type": "REMOVE_LRU_MODULE",
    },
  ],
]
`;

exports[`fetchModule should return a thunk 1`] = `
[
  [
    {
      "meta": {
        "API_REQUEST": "FETCH_MODULE/CS1010S",
      },
      "payload": {
        "url": "test://MOCK_MOD_DETAILS_URL/CS1010S",
      },
      "type": "FETCH_MODULE",
    },
  ],
  [
    {
      "payload": "CS1010S",
      "type": "UPDATE_MODULE_TIMESTAMP",
    },
  ],
]
`;

exports[`fetchModuleArchive should return a request action 1`] = `
{
  "meta": {
    "API_REQUEST": "FETCH_ARCHIVE_MODULE_CS1010S_2016/2017",
    "academicYear": "2016/2017",
  },
  "payload": {
    "url": "test://MOCK_MOD_DETAILS_URL/CS1010S/2016/2017",
  },
  "type": "FETCH_ARCHIVE_MODULE",
}
`;

exports[`fetchModuleList should return a request action 1`] = `
{
  "meta": {
    "API_REQUEST": "FETCH_MODULE_LIST",
  },
  "payload": {
    "url": "test://MOCK_MOD_LIST_URL",
  },
  "type": "FETCH_MODULE_LIST",
}
`;

exports[`getLRUModule should return the LRU and non-timetable module 1`] = `
[
  "ACC1003",
]
`;

exports[`removeLRUModule should return an action 1`] = `
{
  "payload": [
    "ACC1001",
  ],
  "type": "REMOVE_LRU_MODULE",
}
`;

exports[`updateModuleTimestamp should return an action 1`] = `
{
  "payload": "ACC1001",
  "type": "UPDATE_MODULE_TIMESTAMP",
}
`;
